# clive

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .stylelintrc.json  CLAUDE.md  Dockerfile  Dockerfile.CI  Dockerfile.TESTNET  README.md  block_log_util_bug.py  entrypoint.bash  mkdocs.yml  pydoclint-errors-baseline.txt  pyproject.toml  renovate.json  renovate.json5  settings.toml  style.toml  testnet_node.py  win.md
.claude/: ARCHITECTURE.md
.claude/agents/: clive-code-reviewer.md
.claude/commands/: lint.md  reflection.md  smoke.md  test.md
.gitlab/ci/: main-pipeline.yml  renovate.yml
.gitlab/merge_request_templates/: Default.md
.old/: style.toml
.old/clive/: abstract_class.py  app.py  app_status.py  config.py  get_clive.py  logger.py  main.py
TUI_introduction/: 1.py  2.py  3.py  4.py  5.py  6.py
block_log_util_logs/: log_1455_get_block  log_1456_get_block  log_1456_get_head_block_number
clive/: __init__.py  _version.py  abstract_class.py  app.py  app_status.py  config.py  dev.py  dev_import.py  enums.py  exceptions.py  logger.py  main.py  models.py  run_cli.py  run_tui.py  settings.toml  util.py  version.py
clive/__private/: abstract_class.py  before_launch.py  cli_error.py  config.py  enums.py  logger.py  run_cli.py  run_tui.py  safe_settings.py  scope_timer.py  setproperties.py  setup_schemas.py  stopwatch.py  (+1 more)
docker/: Dockerfile  Dockerfile.TESTNET  entrypoint.sh
docs/: Reference.md  cli_commands_structure.md  custom.css  development.md  index.md  reference.md
script_interface_examples/: a_complex_alice.py  a_complex_radek.py  a_example_locked_profile.py  a_example_new_profile.py  a_example_unlocked_profile.py  b_complex_alice.py  benchmark.py  chaining_example.py  chaining_examples.py  example_transfer_to_testnet.py  example_unlocked_profile.py  interface_presentation.py  playground.py  test_chaining_example.py  transfer_autosign.json
scripts/: activate_beekeeper.sh  build-ci-base-image.sh  build_clive.sh  build_faketime.sh  build_local_instance.sh  check_for_dangling_beekeeper.bash  check_is_private_key_nor_password_is_not_logged.bash  clive-cmd.sh  common.sh  generate_api_docs.sh  push-ci-base-image.sh  run_instance.sh  setup_beekeeper.sh  start_clive.sh  start_clive.sh.template  start_clive_cli.sh  update_storage_revision.py
testnet_block_log/: alternate-chain-spec.json  config.ini  generate_block_log.py  timestamp
tests/: __init__.py  conftest.py  pytest.ini
tests/clive-local-tools/: pyproject.toml
tests/clive-local-tools/clive_local_tools/: checkers.py  constants.py  helpers.py  models.py  network.py  types.py  waiters.py
tests/clive-local-tools/clive_local_tools/beekeeper/: network.py  waiters.py
tests/clive-local-tools/clive_local_tools/checkers/: blockchain_checkers.py  profile_accounts_checker.py  profile_checker.py  wallet_checkers.py
tests/clive-local-tools/clive_local_tools/cli/: checkers.py  cli_tester.py  command_chaining.py  command_options.py  exceptions.py  get_data_from_table.py  helpers.py  imports.py  result_wrapper.py  show.py  testing_cli.py  timing.py  types.py
tests/clive-local-tools/clive_local_tools/cli/chaining/: account_creation.py  chained_command.py  update_authority.py
tests/clive-local-tools/clive_local_tools/data/: constants.py  generates.py  models.py  types.py
tests/clive-local-tools/clive_local_tools/storage_migration/: .gitignore  __init__.py  helpers.py  regenerate_prepared_profiles.py
tests/clive-local-tools/clive_local_tools/storage_migration/blank_profile_files/: __init__.py
tests/clive-local-tools/clive_local_tools/storage_migration/prepared_data/data/c600278a/: one.profile
tests/clive-local-tools/clive_local_tools/storage_migration/prepared_data/data/mary/: v1.profile
tests/clive-local-tools/clive_local_tools/storage_migration/prepared_data/data/v1/: one.profile
tests/clive-local-tools/clive_local_tools/storage_migration/with_alarms/beekeeper/: alice.wallet  alice_encryption.wallet  mary.wallet  mary_encryption.wallet
tests/clive-local-tools/clive_local_tools/storage_migration/with_alarms/data/alice/: v1.profile
tests/clive-local-tools/clive_local_tools/storage_migration/with_alarms/data/mary/: v0.profile
tests/clive-local-tools/clive_local_tools/storage_migration/with_operations/data/alice/: v1.profile
tests/clive-local-tools/clive_local_tools/storage_migration/with_operations/data/mary/: v0.profile
tests/clive-local-tools/clive_local_tools/storage_migration/with_transaction_containing_negative_tapos/data/mary/: v0.profile
tests/clive-local-tools/clive_local_tools/storage_migration/without_alarms_and_operations/beekeeper/: mary.wallet  mary_encryption.wallet
tests/clive-local-tools/clive_local_tools/storage_migration/without_alarms_and_operations/data/alice/: v1.profile
tests/clive-local-tools/clive_local_tools/storage_migration/without_alarms_and_operations/data/mary/: v0.profile
tests/clive-local-tools/clive_local_tools/test_doubles/: app_state.py
tests/clive-local-tools/clive_local_tools/testnet_block_log/: __init__.py  alternate-chain-spec.json  config.ini  constants.py  generate_block_log.py  prepared_data.py  timestamp
tests/clive-local-tools/clive_local_tools/testnet_block_log/block_log_with_config/: .gitignore  alternate-chain-spec.json  block_log_part.0001  block_log_part.0001.artifacts  config.ini
tests/clive-local-tools/clive_local_tools/testnet_block_log/blockchain/: block_log  block_log_part.0001  block_log_part.0001.artifacts
tests/clive-local-tools/clive_local_tools/tui/: activate.py  broadcast_transaction.py  checkers.py  choose_asset_token.py  clive_quit.py  constants.py  fast_broadcast.py  finalize_transaction.py  notifications.py  process_operation.py  textual.py  textual_helpers.py  types.py  unlock.py  utils.py  witness_votes_utils.py  workaround_incompatibility_with_fixtures.py
tests/clive-local-tools/clive_local_tools/tui/bindings/: __init__.py  custom_bindings.toml  default_bindings.toml  helpers.py  regenerate_default_bindings.py
wax/: CMakeLists.txt  build.py  pyproject.toml  setup.py
(+2356 files in other folders)
