[build-system]
requires = [
    "poetry-core>=1.7.0,<2.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "hiveio-clive"
description = "CLI application for interacting with the Hive blockchain."
dynamic = ["version"]
readme = "README.md"
authors = [{ name = "Krzysztof Mochocki", email = "kmochocki@syncad.com" }, { name = "Mateusz Żebrak", email = "mzebrak@syncad.com" }]
requires-python = '>=3.12,<4'
dependencies = [
    'loguru (>=0.7.2,<1.0.0)',
    'textual (>=7.3.0,<8.0.0)',
    'aiohttp (>=3.11.15,<4.0.0)',
    'typer (>=0.20.0,<1.0.0)',
    'inflection (>=0.5.1,<1.0.0)',
    'humanize (>=4.12.2,<5.0.0)',
    'toml (>=0.10.2,<1.0.0)',
    "pathvalidate (>=3.3.1,<4.0.0)",
    'hiveio-schemas (>=1.28.2,<2.0.0)',
    'hiveio-beekeepy (>=1.28.6,<2.0.0)',
    'hiveio-wax (>=2.0.0,<3.0.0)',
]

[project.urls]
repository = "https://gitlab.syncad.com/hive/clive"

[project.scripts]
clive = "clive.main:main"
clive-dev = "clive.dev:main"


[tool.poetry]
requires-poetry = "2.1.3"
packages = [
    { include = "clive" },
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-hive", url = "https://gitlab.syncad.com/api/v4/groups/136/-/packages/pypi/simple", priority = "primary" },
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }
poetry-plugin-freeze = { version = "1.2.0" }

[tool.poetry.group.embeddedtestnet.dependencies]
hiveio-test-tools = ">=2.0.0,<3.0.0"
pytest = ">=8.3.5,<9.0.0"  # required by test-tools, otherwise they will fail
clive-local-tools = { path = "tests/clive-local-tools", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-asyncio = ">=0.26.0,<1.0.0"
pytest-xdist = ">=3.6.1,<4.0.0"
pytest-timeout = ">=2.3.1,<3.0.0"
textual-dev = ">=1.7.0,<2.0.0"
hiveio-test-tools = ">=2.0.0,<3.0.0"
clive-local-tools = { path = "tests/clive-local-tools", develop = true }

[tool.poetry.group.static-analysis.dependencies]
mypy = ">=1.19.1,<2.0.0"
pre-commit = ">=4.5.1,<5.0.0"
ruff = ">=0.14.10,<1.0.0"
pydoclint = ">=0.8.3,<1.0.0"
types-toml = ">=0.10.8.20240310,<1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.1,<2.0.0"
mkdocstrings-python = ">=1.16.12,<2.0.0"
mkdocs-material = ">=9.6.12,<10.0.0"
markdown-pycon = ">=1.0.1,<2.0.0"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
# PEP 440 compliant versioning with .post{timestamp}
# https://peps.python.org/pep-0440/
#
# Version examples (assuming last tag is 1.2.3rc1):
#   Tag (distance=0, clean):       1.2.3rc1
#   Tag (distance=0, dirty):       1.2.3rc1+dirty
#   develop (distance>0):          1.2.3rc1.post20260129082556
#   develop (dirty):               1.2.3rc1.post20260129082556+dirty
#   feature branch (distance>0):   1.2.3rc1.post20260129082556.dev0+unstable
#   feature branch (dirty):        1.2.3rc1.post20260129082556.dev0+unstable.dirty
#   feature branch (distance=0):   1.2.3rc1  (same as tag)
#
# Logic:
#   - distance=0         -> exact tag version
#   - distance>0, stable -> tag + .post{timestamp}
#   - distance>0, unstable -> tag + .post{timestamp}.dev0+unstable (pre-release, ignored by default)
#   - dirty              -> + 'dirty' marker
#   - unstable           -> + 'unstable' marker
#
# Stability detection:
#   - stable: develop/master/main branches OR tag checkout (detached HEAD with distance=0)
#   - unstable: feature branches OR detached HEAD with distance>0
#   - CI: GitLab checks out as detached HEAD, so branch is None;
#     use CI_COMMIT_REF_NAME env var as fallback for branch detection
#
# Version ordering (newest last):
#   1.2.3rc1 < 1.2.3rc1.post20260129082556 < 1.2.3rc1.post20260129083000.dev0+unstable < 1.2.3rc1.post20260129083000
#   (tag)      (develop)                     (feature, newer timestamp)                  (develop, same timestamp)
#
# pip/poetry behavior:
#   - `poetry update` / `pip install pkg>=1.0` -> selects stable only (ignores .dev0)
#   - `pip install --pre` / `allow-prereleases = true` -> includes feature branches
format-jinja = """
    {%- set STABLE_BRANCHES = ['develop', 'master', 'main'] -%}

    {%- set effective_branch = branch or env.get('CI_COMMIT_REF_NAME') -%}
    {%- set is_on_tag = distance == 0 -%}
    {%- set is_after_tag = distance > 0 -%}
    {%- set is_tag_checkout = branch is none and is_on_tag -%}
    {%- set is_stable = effective_branch in STABLE_BRANCHES or is_tag_checkout -%}
    {%- set is_feature_branch = is_after_tag and not is_stable -%}

    {%- set post = timestamp|int if is_after_tag else none -%}
    {%- set dev = 0 if is_feature_branch else none -%}
    {%- set local_parts = ['unstable'] if is_feature_branch else [] -%}
    {%- set local_parts = local_parts + ['dirty'] if dirty else local_parts -%}

    {{ serialize_pep440(base, stage, revision, post=post, dev=dev, metadata=local_parts) }}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "clive/__init__.py",
]


[tool.mypy]
strict = true
strict_equality_for_none = true
disallow_untyped_decorators = false
python_version = 3.12

[[tool.mypy.overrides]]
module = ["test_tools.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["ALL"]
external = [
   "DOC",  # pydoclint - we're running it externally since ruff hasn't implemented most of it rules yet. See: https://github.com/astral-sh/ruff/issues/12434
]
ignore = [
    "D1", # missing docstring in public
    "D203", # 1 blank line required before class docstring; because we re using D211
    "D212", # Multi-line docstring summary should start at the first line; because we re using D213
    "D413", # Missing blank line after last section
    "TRY003", # Avoid specifying long messages outside the exception class; too restrictive
    "TD002", # Missing author in to-do; no need for that
    "TD003", # Missing issue link on the line following this to-do; no need for that
    "SLF001", # Private member accessed: {access}; too restrictive
    "COM812", # Trailing comma missing; handled by ruff formatter
    "EM", # agreed not to use it in our convention
    "FIX", # can't have that enabled, as we treat ruff result as an error on CI
    "S101", # Use of assert detected; too restrictive
    "S603", # `subprocess` call: check for execution of untrusted input; https://github.com/astral-sh/ruff/issues/4045
    "ISC001", # Implicitly concatenated string literals on one line; disabled because conflicts with ruff formatter
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["clive", "wax", "schemas", "clive_local_tools"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"clive/__private/cli/**" = [
    "B008", # Do not perform function call {name} in argument defaults; in Typer it is common to do that # TODO: should be disabled more specifically but requires restructuring typer interface (e.g. storing all typer functions in cli/interface)
]
"clive/__private/ui/**" = [
    "PLR0913", # Too many arguments in function definition; too restrictive; # TODO: could be fixed or disabled in place
    "RUF012", # Mutable class attributes should be annotated with typing.ClassVar; TODO: Check if we can fix it, it's kinda Textual-specific
]
"tests/**" = [
    "S104", # Checks for hardcoded bindings to all network interfaces (0.0.0.0); in tests this is not a security issue
    "S105", # Possible hardcoded password assigned to: "{}"; in tests this is not a security issue
    "S106", # Possible hardcoded password assigned to argument: "{}"; in tests this is not a security issue
    "S602", # Check for method calls that initiate a subprocess with a shell.; in tests this is not a security issue
    "S605", # Checks for calls that start a process with a shell, providing guidance on whether the usage is safe or not; in tests this is not a security issue
]
"clive/__private/core/node/async_hived/**" = [
    "TC001", # Models the hived responses cannot be placed under TYPE_CHECKING
    "PLR0913", # Too many arguments in function definition; too restrictive
    "FBT001", # json_rpc api is accepting just positional arguments
    "FBT002", # json_rpc api is accepting just positional arguments
    "ASYNC109", # that's different timeout handling for hived calls
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.pydoclint]
style = "google"
baseline = "pydoclint-errors-baseline.txt"
arg-type-hints-in-docstring = false  # we want types to be only provided in the signatures and not redundant
check-return-types = false  # we want types to be only provided in the signatures and not redundant
check-yield-types = false  # we want types to be only provided in the signatures and not redundant
check-style-mismatch = true
generate-baseline = true
skip-checking-short-docstrings = false
exclude = "tests/*"
