[tool.poetry]
name = "clive-local-tools"
version = "0.0.0"
description = ""
authors = ["Wiesław Kędzierski <wkedzierski@syncad.com>"]
packages = [
    { include = "clive_local_tools" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
